# brainfuck

./: .gitignore  CMakeLists.txt  README.md  bf.c  makefile
examples/: 2-side-ate.bf  bfi446.bf  divmod.bf  e.bf  factorial.bf  find-nonzero.bf  hanoi.bf  lost-kingdom.bf  ok.bf  powers-of-2.bf  random-bits.bf  random.bf  rot13.bf  squares.bf  text.bf  thue-morse-seq.bf  utm.bf
inc/: bfcommon.h  bfconf.h  brainfuck.h
src/: bfcompile.c  bfdebug.c  bfexecute.c  bfi.c  bfother.c  brainfuck.c
